Added homepage content and styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="hero-image hero-image--home">
         <header>
-            <nav class="container-fluid">
+            <nav class="container-fluid large-wrapper">
                 <div class="row align-items-center">
                     <div class="col-8 col-md-4">
                         <a href="index.html">
@@ -22,7 +22,7 @@
                 		</div>
                 	</a>
                     </div>
-                    <div class="col-1 offset-2 d-block d-md-none">
+                    <div class="col-1 offset-2 offset-md-7 d-block menu-toggle-wrapper">
                         <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle"><span class="fas fa-bars" aria-hidden="true"></span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
@@ -36,24 +36,60 @@
                 </div>
             </nav>
         </header>
-       <!--  <section>
-            <h2>Listen now</h2>
-        </section> -->
+        <section class="container-fluid large-wrapper">
+            <div class="row justify-content-center">
+                <div class="col-11 section-lead">
+                    <div class="row  align-items-center">
+                        <div class="col-12 col-sm-6">
+                            <h2 class="heading">New Track:</h2>
+                            <h3 class="heading heading--lead">In Your Eyes</h3>
+                            <div class="text-center"><a href="music.html" class="btn button music-button">Listen Now</a></div>
+                        </div>
+                        <div class="col-12 col-sm-6 order-sm-first"><img src="images/in-your-eyes-cover.jpg" alt="Album cover" class="album"></div>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </div>
-    <footer class= "container-fluid">
+    <div class="section-wrapper">
+        <section class="container-fluid large-wrapper">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 vr-hr">
+                    <article>
+                        <img src="images/cotter-2.jpg" alt="Tom Cotter" class="headshot">
+                        <h3 class="heading">About Cotter</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi laborum, ullam, aliquam nemo ad quia eos cupiditate temporibus dolorem eveniet velit odio alias molestiae assumenda? Reiciendis ut consequuntur facilis totam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsa id totam animi repellendus voluptatibus rem ex, quod blanditiis nemo explicabo unde voluptate, quas minus nesciunt hic dolorem magni ipsum!</p>
+                    </article>
+                </div>
+                <div class="col-12 col-md-6">
+                    <article>
+                        <div class="date"><span class="date-days">28</span> Nov</div>
+                        <h3 class="heading">Next live show:</h3>
+                        <h4 class="location">The Sunflower Lounge</h4>
+                        <h5 class="location">Birmingham</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
+                        <div class="text-center text-md-right"><a href="shows.html" class="btn button shows-button">More live shows</a></div>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer class="container-fluid">
         <div class="row justify-content-center footer">
-        	<div class="col-12 mx-auto"><h3 class="social-header">Like and follow for updates from Cotter</h3></div>
-        	<div class="col-7 mx-auto">
+            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h3></div>
+        	<div class="col-7">
         		<div class="social-menu">
 		            <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
 		            <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span></a>
 		            <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span></a>
 		            <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
 		            <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
+		            <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
 		            <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true" class="social-link"></span></a>
            	 	</div>
             </div>
-            <div class="col-12 mx-auto align-self-end copy-notice">&copy; Cotter 2018</div>
+            <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
         </div>
         <a href="contact.html"></a>
 
