Added Shows page and styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="section-wrapper">
         <section class="container-fluid large-wrapper">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-6 vr-hr">
+                <div class="col-12 col-md-6 vr-hr vr-hr-md">
                     <article>
                         <img src="images/cotter-2.jpg" alt="Tom Cotter" class="headshot">
                         <h3 class="heading">About Cotter</h3>
