--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
     </div>
     <div class="section-wrapper">
-        <section class="container-fluid large-wrapper">
+        <div class="container-fluid large-wrapper">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6 vr-hr vr-hr-md">
                     <article>
@@ -73,11 +73,11 @@
                     </article>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
     <footer class="container-fluid">
         <div class="row justify-content-center footer">
-            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h3></div>
+            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5></div>
         	<div class="col-7">
         		<div class="social-menu">
 		            <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
@@ -86,7 +86,7 @@
 		            <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
 		            <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
 		            <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-		            <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true" class="social-link"></span></a>
+		            <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
            	 	</div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
