--- a/shows.html
+++ b/shows.html
@@ -26,7 +26,7 @@
                         <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle menu-toggle--light"><span class="fas fa-bars" aria-hidden="true"></span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
-                        <ul class="nav flex-column flex-md-row menu-dropdown menu-dropdown--light">
+                        <ul class="nav flex-column flex-md-row menu-dropdown menu-dropdown--light menu-dropdown--bg">
                             <li class="nav-item"><a href="index.html" class="nav-link menu-link menu-link--light">Home</a></li>
                             <li class="nav-item"><a href="music.html" class="nav-link menu-link menu-link--light">Music</a></li>
                             <li class="nav-item"><a href="shows.html" class="nav-link menu-link menu-link--light menu-link--current--light">Shows</a></li>
@@ -36,16 +36,16 @@
                 </div>
             </nav>
         </header>
-        <section class="container-fluid large-wrapper">
+        <div class="container-fluid large-wrapper">
             <div class="row justify-content-center">
                 <div class="col-11 section-lead">
                     <div class="row ">
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-7 col-lg-5">
                             <article>
                                 <div class="date"><span class="date-days date-days--light">28</span> Nov</div>
-                                <h2 class="heading">Next live show:</h3>
-                                <h3 class="location">The Sunflower Lounge</h4>
-                                <h4 class="location">Birmingham</h5>
+                                <h2 class="heading">Next live show:</h2>
+                                <h3 class="location">The Sunflower Lounge</h3>
+                                <h4 class="location">Birmingham</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
                                 <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
                             </article>
@@ -53,32 +53,28 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
-    <div class="section-wrapper">
-        <section class="container-fluid large-wrapper">
+    <section class="section-wrapper">
+        <div class="container-fluid large-wrapper">
             <div class="row">
                 <div class="col-12 col-lg-4 vr-hr vr-hr-lg">
-                    <article>
-                        <div class="date"><span class="date-days">28</span> Nov</div>
-                        <h5 class="location">The Sunflower Lounge</h4>
-                        <h6 class="location">Birmingham</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
-                        <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
-                    </article>
+                    <div class="date"><span class="date-days">28</span> Nov</div>
+                    <h5 class="location">The Sunflower Lounge</h5>
+                    <h6 class="location">Birmingham</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
+                    <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
                 </div>
                 <div class="col-12 col-lg-4 vr-hr vr-hr-lg">
-                    <article>
-                        <div class="date"><span class="date-days">28</span> Nov</div>
-                        <h5 class="location">The Sunflower Lounge</h4>
-                        <h6 class="location">Birmingham</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
-                        <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
-                    </article>
+                    <div class="date"><span class="date-days">28</span> Nov</div>
+                    <h5 class="location">The Sunflower Lounge</h5>
+                    <h6 class="location">Birmingham</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
+                    <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
                 </div>
                 <div class="col-12 col-lg-4">
                     <h4 class="heading">Be the first to hear about live shows</h4>
-                    <p>Like and follow on social media to stay in the loop about upcoming shows and tours.<p>
+                    <p>Like and follow Cotter on social media to stay in the loop about upcoming shows and tours.<p>
                     <div class="row justify-content-center">
                         <div class="col-12 text-center"><a href="https://www.facebook.com/cotter.music/" target="_blank" class="btn button shows-button"><span class="fab fa-facebook-f"  aria-hidden="true"></span> Facebook</a></div>
                         <div class="col-12 text-center"><a href="https://www.instagram.com/thisiscotter/" target="_blank" class="btn button shows-button"><span class="fab fa-instagram" aria-hidden="true"></span> Instagram</a></div>
@@ -86,11 +82,11 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
     <footer class="container-fluid">
         <div class="row justify-content-center footer">
-            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h3></div>
+            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5></div>
             <div class="col-7">
                 <div class="social-menu">
                     <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
@@ -99,7 +95,7 @@
                     <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
                     <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
                     <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true" class="social-link"></span></a>
+                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
                 </div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
