Repaced placeholder content, added screen reader assistance, tidied css and README.

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" class="css">
     <title>COTTER - Contact</title>
+    <meta name="description" content="Find Cotter on social media.">
+    <meta name="keywords" content="contact, book, Tom Cotter, Facebook, Twitter, Instagram, email">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                     </a>
                     </div>
                     <div class="col-1 offset-2 offset-md-7 d-block menu-toggle-wrapper">
-                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle"><span class="fas fa-bars" aria-hidden="true"></span></a>
+                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle"><span class="fas fa-bars" aria-hidden="true"></span><span class="sr-only">Toggle Menu</span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
                         <ul class="nav flex-column flex-md-row menu-dropdown menu-dropdown--no-border">
@@ -42,56 +44,65 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6 vr-hr vr-hr-md">
                     <h2 class="heading">Contact cotter on social media:</h2>
-                    <div class="row justify-content-center">
-                        <div class="col-12 text-center"><a href="https://m.me/cotter.music" target="_blank" class="btn button contact-button"><span class="fab fa-facebook-f"  aria-hidden="true"></span> Facebook Messenger</a></div>
-                        <div class="col-12 text-center"><a href="https://www.instagram.com/thisiscotter/" target="_blank" class="btn button contact-button"><span class="fab fa-instagram" aria-hidden="true"></span> DM on Instagram</a></div>
-                        <div class="col-12 text-center"><a href="https://twitter.com/intent/tweet?screen_name=thisiscotter&ref_src=twsrc%5Etfw" target="_blank" class="btn button contact-button"><span class="fab fa-twitter"  aria-hidden="true"></span> Tweet @thisiscotter</a></div>
+                    <div class="row">
+                        <div class="d-none d-lg-flex col-lg-4 col-xl-5 align-self-center">
+                            <div class="w-100">
+                                <img src="images/cotter-1.jpg" alt="Tom Cotter" class="contact-avatar img-fluid">
+                            </div>
+                        </div>
+                            <div class="col-12 col-lg-8 col-xl-7 align-self-center">
+                                <div class="row">
+                                    <div class="col-12 text-center"><a href="https://m.me/cotter.music" target="_blank" class="btn button contact-button"><span class="fab fa-facebook-f"  aria-hidden="true"></span> Facebook Messenger</a></div>
+                                    <div class="col-12 text-center"><a href="https://www.instagram.com/thisiscotter/" target="_blank" class="btn button contact-button"><span class="fab fa-instagram" aria-hidden="true"></span> DM on Instagram</a></div>
+                                    <div class="col-12 text-center"><a href="https://twitter.com/intent/tweet?screen_name=thisiscotter&ref_src=twsrc%5Etfw" target="_blank" class="btn button contact-button"><span class="fab fa-twitter"  aria-hidden="true"></span> Tweet @thisiscotter</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h3 class="heading">Or message Cotter directly via email:</h3>
+                        <form action="mailto:cotter_music@outlook.com" enctype="text/plain" method="post">
+                            <div class="row">
+                                <div class="form-group col-12 col-md-6">
+                                    <input type="text" name="name" placeholder="Name" class="form-control form-control-lg" required>
+                                </div>
+                                <div class="form-group col-12 col-md-6">
+                                    <input type="email" name="email" placeholder="Email" class="form-control form-control-lg" required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group col-12">
+                                    <textarea name="message" rows="6" class="form-control" placeholder="Message" required></textarea>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="form-group col-6 col-md-4">
+                                    <input type="submit" class="form-control btn button contact-button" value="Send">
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <h3 class="heading">Or message Cotter directly via email:</h3>
-                    <form action="cotter_music@outlook.com" enctype="text/plain" method="post">
-                        <div class="row">
-                            <div class="form-group col-12 col-md-6">
-                                <input type="text" name="name" placeholder="Name" class="form-control form-control-lg" required>
-                            </div>
-                            <div class="form-group col-12 col-md-6">
-                                <input type="email" name="email" placeholder="Email" class="form-control form-control-lg" required>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-12">
-                                <textarea name="message" rows="6" class="form-control" placeholder="Message" required></textarea>
-                            </div>
-                        </div>
-                        <div class="row justify-content-center">
-                            <div class="form-group col-6 col-md-4">
-                                <input type="submit" class="form-control btn button contact-button" value="Send">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
         </section>
     </div>
     <footer class="container-fluid">
         <div class="row justify-content-center footer">
-            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5></div>
+            <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5>
+            </div>
             <div class="col-7">
                 <div class="social-menu">
-                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
-                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span></a>
-                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span></a>
-                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
-                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
-                    <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
+                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span><span class="sr-only">Instagram</span></a>
+                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span><span class="sr-only">Twitter</span></a>
+                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span><span class="sr-only">Youtube</span></a>
+                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span><span class="sr-only">Spotify</span></a>
+                    <a href="https://itunes.apple.com/us/artist/cotter/34803256" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span><span class="sr-only">Apple Music</span></a>
+                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span><span class="sr-only">SoundCloud</span></a>
                 </div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
         </div>
         <a href="contact.html"></a>
-
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
