--- a/shows.html
+++ b/shows.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" class="css">
     <title>COTTER - Upcoming live shows</title>
+    <meta name="description" content="Find out about Cotter's next live performaces.">
+    <meta name="keywords" content="live, show, gig, performance, acoustic, indie, singer, songwriter">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                     </a>
                     </div>
                     <div class="col-1 offset-2 offset-md-7 d-block menu-toggle-wrapper">
-                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle menu-toggle--light"><span class="fas fa-bars" aria-hidden="true"></span></a>
+                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle menu-toggle--light"><span class="fas fa-bars" aria-hidden="true"></span><span class="sr-only">Toggle Menu</span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
                         <ul class="nav flex-column flex-md-row menu-dropdown menu-dropdown--light menu-dropdown--bg">
@@ -46,7 +48,9 @@
                                 <h2 class="heading">Next live show:</h2>
                                 <h3 class="location">The Sunflower Lounge</h3>
                                 <h4 class="location">Birmingham</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
+                                <p>In support of M A R C and Make Friends.</p>
+                                <p>Cotter will be playing an acoustic set, featuring songs new and old in the basement of this cosy town centre bar. With no-nonsense relatable rock and roll from M A R C and progressive indie from Make Friends Music it promises to be a great gig.</p>
+                                <p>Doors - 19:30</p>
                                 <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
                             </article>
                         </div>
@@ -59,18 +63,17 @@
         <div class="container-fluid large-wrapper">
             <div class="row">
                 <div class="col-12 col-lg-4 vr-hr vr-hr-lg">
-                    <div class="date"><span class="date-days">28</span> Nov</div>
-                    <h5 class="location">The Sunflower Lounge</h5>
+                    <div class="date"><span class="date-days">09</span> Dec</div>
+                    <h5 class="location">Spark 44</h5>
                     <h6 class="location">Birmingham</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
-                    <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
+                    <p>The Spark 44 Christmas party will see the year out in style. Don your best Christmas jumper and join Cotter and friends for a festive celebration.</p>
+                    <p>If you've been really good this year he might even play something Christmassy!</p>
                 </div>
                 <div class="col-12 col-lg-4 vr-hr vr-hr-lg">
-                    <div class="date"><span class="date-days">28</span> Nov</div>
-                    <h5 class="location">The Sunflower Lounge</h5>
+                    <div class="date"><span class="date-days">16</span> Jan</div>
+                    <h5 class="location">The Bulls Head</h5>
                     <h6 class="location">Birmingham</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
-                    <div class="text-center text-md-right"><a href="https://www.facebook.com/events/355506255020137/" target="_blank" class="btn button shows-button">More info</a></div>
+                    <p>A live acoustic set from Cotter from 19:00 in the Club Room of The Bulls Head. Free entry!</p>
                 </div>
                 <div class="col-12 col-lg-4">
                     <h4 class="heading">Be the first to hear about live shows</h4>
@@ -89,13 +92,13 @@
             <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5></div>
             <div class="col-7">
                 <div class="social-menu">
-                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
-                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span></a>
-                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span></a>
-                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
-                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
-                    <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
+                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span><span class="sr-only">Instagram</span></a>
+                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span><span class="sr-only">Twitter</span></a>
+                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span><span class="sr-only">Youtube</span></a>
+                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span><span class="sr-only">Spotify</span></a>
+                    <a href="https://itunes.apple.com/us/artist/cotter/34803256" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span><span class="sr-only">Apple Music</span></a>
+                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span><span class="sr-only">SoundCloud</span></a>
                 </div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
