--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" class="css">
     <title>COTTER - Singer-Songwriter</title>
+    <meta name="description" content="Birmingham based singer-songwriter.">
+    <meta name="keywords" content="singer, songwriter, guitar, acoustic, indie, Birmingham">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                 	</a>
                     </div>
                     <div class="col-1 offset-2 offset-md-7 d-block menu-toggle-wrapper">
-                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle"><span class="fas fa-bars" aria-hidden="true"></span></a>
+                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle"><span class="fas fa-bars" aria-hidden="true"></span><span class="sr-only">Toggle Menu</span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
                         <ul class="nav flex-column flex-md-row menu-dropdown">
@@ -45,7 +47,7 @@
                             <h3 class="heading heading--lead">In Your Eyes</h3>
                             <div class="text-center"><a href="music.html" class="btn button music-button">Listen Now</a></div>
                         </div>
-                        <div class="col-12 col-sm-6 order-sm-first"><img src="images/in-your-eyes-cover.jpg" alt="Album cover" class="album"></div>
+                        <div class="col-12 col-sm-6 order-sm-first"><a href="music.html"><img src="images/in-your-eyes-cover.jpg" alt="Album cover" class="album"></a></div>
                         </div>
                     </div>
                 </div>
@@ -58,8 +60,9 @@
                     <article>
                         <img src="images/cotter-2.jpg" alt="Tom Cotter" class="headshot">
                         <h3 class="heading">About Cotter</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi laborum, ullam, aliquam nemo ad quia eos cupiditate temporibus dolorem eveniet velit odio alias molestiae assumenda? Reiciendis ut consequuntur facilis totam.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsa id totam animi repellendus voluptatibus rem ex, quod blanditiis nemo explicabo unde voluptate, quas minus nesciunt hic dolorem magni ipsum!</p>
+                        <p>This is Cotter. A singer-songwriter focusing on truth in songwriting and the emotion within the human psyche. He plays regular shows in his hometown of Birmingham, with a commanding presence on stage he's usually found with a drink in hand. Cotter confidently accompanies his soulful singing with intricate guitar parts and melodic piano.</p>
+                        <p>Tom performed musically for years in a number of Birmingham based bands before starting this new solo project in late 2016 when a guitar, piano and vocals came together to produce the first sounds of a new direction.</p>
+                        <p>2017 saw the his self released two track EP Cotter, followed by the single In Your Eyes later that year.</p>
                     </article>
                 </div>
                 <div class="col-12 col-md-6">
@@ -68,7 +71,9 @@
                         <h3 class="heading">Next live show:</h3>
                         <h4 class="location">The Sunflower Lounge</h4>
                         <h5 class="location">Birmingham</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione labore aperiam, non quos deleniti velit, iusto quo natus, alias ipsa reprehenderit eaque quibusdam. Itaque iste, odit reiciendis doloremque ullam!</p>
+                        <p>In support of M A R C and Make Friends.</p>
+                        <p>Cotter will be playing an acoustic set, featuring songs new and old in the basement of this cosy town centre bar. With no-nonsense relatable rock and roll from M A R C and progressive indie from Make Friends Music it promises to be a great gig.</p>
+                        <p>Doors - 19:30</p>
                         <div class="text-center text-md-right"><a href="shows.html" class="btn button shows-button">More live shows</a></div>
                     </article>
                 </div>
@@ -80,13 +85,13 @@
             <div class="col-12"><h5 class="heading social-heading">Like and follow for updates from Cotter</h5></div>
         	<div class="col-7">
         		<div class="social-menu">
-		            <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
-		            <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span></a>
-		            <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span></a>
-		            <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
-		            <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
-		            <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-		            <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
+		            <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span><span class="sr-only">Instagram</span></a>
+                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span><span class="sr-only">Twitter</span></a>
+                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span><span class="sr-only">Youtube</span></a>
+                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span><span class="sr-only">Spotify</span></a>
+                    <a href="https://itunes.apple.com/us/artist/cotter/34803256" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span><span class="sr-only">Apple Music</span></a>
+                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span><span class="sr-only">SoundCloud</span></a>
            	 	</div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
