--- a/music.html
+++ b/music.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" class="css">
     <title>COTTER - Music</title>
+    <meta name="description" content="Listen to music from singer-songwriter Cotter.">
+    <meta name="keywords" content="singer, songwriter, guitar, piano, acoustic, indie, Birmingham, music, listen">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                     </a>
                     </div>
                     <div class="col-1 offset-2 offset-md-7 d-block menu-toggle-wrapper">
-                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle menu-toggle--light"><span class="fas fa-bars" aria-hidden="true"></span></a>
+                        <a data-toggle="collapse" href="#collapse-menu" role="button" aria-expanded="false" aria-controls="collapse-menu" class="menu-toggle menu-toggle--light"><span class="fas fa-bars" aria-hidden="true"></span><span class="sr-only">Toggle Menu</span></a>
                     </div>
                     <div class="col-12 col-md-8 collapse" id="collapse-menu">
                         <ul class="nav flex-column flex-md-row menu-dropdown menu-dropdown--light">
@@ -55,8 +57,8 @@
                         <span class="text-right d-block attribution">Ian Paget - Indie Midlands</span>
                     </blockquote>
                     <blockquote class="testamonial">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem voluptatibus nulla a quae possimus reiciendis corrupti.</p>
-                        <span class="text-right d-block attribution">Jane Doe</span>
+                        <p>I don't usually plug stuff, but In Your Eyes is too good not to. Give it a listen!</p>
+                        <span class="text-right d-block attribution">Chucking Roosters - Twitter</span>
                     </blockquote>
                         </div>
                     </div>
@@ -85,7 +87,7 @@
                                 <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="btn button music-button"><span class="fab fa-spotify" aria-hidden="true"></span> On Spotify</a>
                             </div>
                             <div class="col-12 text-center align-items-center">
-                                <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="btn button music-button"><span class="fab fa-apple" aria-hidden="true"></span> On Apple Music</a>
+                                <a href="https://itunes.apple.com/us/artist/cotter/34803256" target="_blank" class="btn button music-button"><span class="fab fa-apple" aria-hidden="true"></span> On Apple Music</a>
                             </div>
                             <div class="col-12 text-center align-items-center">
                                 <a href="https://soundcloud.com/cotter_music" target="_blank" class="btn button music-button"><span class="fab fa-soundcloud" aria-hidden="true"></span> On Soundcloud</a>
@@ -100,13 +102,13 @@
             </div>
             <div class="col-7">
                 <div class="social-menu">
-                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span></a>
-                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span></a>
-                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span></a>
-                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span></a>
-                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span></a>
-                    <a href="https://itunes.apple.com/us/artist/cotter/" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span></a>
-                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span></a>
+                    <a href="https://www.facebook.com/cotter.music/" target="_blank" class="social-link"><span class="fab fa-facebook-f"  aria-hidden="true"></span><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.instagram.com/thisiscotter/" target="_blank" class="social-link"><span class="fab fa-instagram" aria-hidden="true"></span><span class="sr-only">Instagram</span></a>
+                    <a href="https://twitter.com/thisiscotter" target="_blank" class="social-link"><span class="fab fa-twitter"  aria-hidden="true"></span><span class="sr-only">Twitter</span></a>
+                    <a href="https://www.youtube.com/channel/UCVakLfM_eKAAy9xsk_jinAg" target="_blank" class="social-link"><span class="fab fa-youtube"  aria-hidden="true"></span><span class="sr-only">Youtube</span></a>
+                    <a href="https://open.spotify.com/artist/5B30D0nFyQrSQ9EYfesvDU?si=Ajdc7XM5QB2V6Vp158a02A" target="_blank" class="social-link"><span class="fab fa-spotify" aria-hidden="true"></span><span class="sr-only">Spotify</span></a>
+                    <a href="https://itunes.apple.com/us/artist/cotter/34803256" target="_blank" class="social-link"><span class="fab fa-apple" aria-hidden="true"></span><span class="sr-only">Apple Music</span></a>
+                    <a href="https://soundcloud.com/cotter_music" target="_blank" class="social-link"><span class="fab fa-soundcloud" aria-hidden="true"></span><span class="sr-only">SoundCloud</span></a>
                 </div>
             </div>
             <div class="col-12 align-self-end copy-notice">&copy; Cotter 2018</div>
